schema/testdata/validation_permission_attribute_invalid_actiontype_arg/schema.keel
model Person {
    actions {
        get getPerson(id)
    }

    @permission(expression: true, actions:[get, true])
}
